remove jekyll, update machines page
Former-commit-id: ec430f3860fda59df1c8127ccbef9541dc731976

--- a/colonies.html
+++ b/colonies.html
@@ -78,7 +78,7 @@
 	</nav>
 <header>
 	<div id="Logo">
-		<img src="img/MWLogo-for-black-bckgnd.svg" alt="Moonwards" id="logo">
+		<img src="img/MWLogo-for-black-bckgnd.svg" alt="Moonwards">
 	</div>
 	<div class="intro">
 			<h1>The Colonies</h1>
