--- a/machines.html
+++ b/machines.html
@@ -79,7 +79,7 @@
   		</nav>
 			<header>
 				<div id="Logo">
-					<img src="img/MWLogo-for-black-bckgnd.svg" alt="Moonwards" id="logo">
+					<img src="img/MWLogo-for-black-bckgnd.svg" alt="Moonwards">
 				</div>
 				<div class="intro">
 						<h1>The Machines that make it Possible</h1>
@@ -140,23 +140,168 @@
 				<li>
 				The extremely abrasive, finely
 				powdered soil that will grind away at any moving part it gets into.
+				And it comes with static cling. Some things can be wrapped to minimize
+				the dust that enters. Magnetic brushes seem quite effective for
+				dusting things off, though they haven't been tested on-site.
+				Ultimately, the best thing is to fuse the surface soil into a
+				solid cap of stone wherever robots
+				work (or people).
 			</li>
 			<li>
 				The 3 second round-trip transmission delay between Earth and Moon,
 				that will need to be designed for to make remote operation work.
+				So, if a robot is tipping over, it needs to look after that itself.
+				It needs to be able to handle simple, repetitive tasks on its own.
+				It needs protocols for collision avoidance. It needs to understand
+				what it is looking at well enough to direct itself as it moves around
+				and manipulates things.
 			</li>
+		</ul>
+		<p> The videos in the sidebar show we've made
+		big advances on these things, but there is a ways to go. It is
+		hard to overstate how much of a difference robots with these
+		capabilities make. They are absolutely necessary for success.
+		</p>
 		</div>
 	</div>
 </section>
 <aside>
-	<div class="sideDiv">
+	<div class="sidePairTop">
 		<div class="framewrap frame16x9">
 				<iframe
 				src="https://www.youtube.com/embed/Tb0_GNyczCA"
 				allowfullscreen></iframe>
 		</div>
 	</div>
+	<div class="sidePairBottom">
+		The <a href="https://www-robotics.jpl.nasa.gov/systems/system.cfm?System=11">
+			ATHLETE rover</a> designed for the Constellation program.
+		A working prototype exists.
+	</div>
+	<div class="sidePairTop">
+		<div class="framewrap frame16x9">
+				<iframe
+				src="https://www.youtube.com/embed/tf7IEVTDjng?rel=0&amp;controls=0"
+				allowfullscreen></iframe>"
+		</div>
+	</div>
+	<div class="sidePairBottom">
+		<a href="https://en.wikipedia.org/wiki/Boston_Dynamics">Boston
+			Dynamics</a> has made great progress in responsive,
+		agile robots in the last 15 years. It is currently owned
+		by Google subsidiary Alphabet Inc.
+	</div>
+	<div class="sidePairTop">
+		<div class="framewrap frame16x9">
+				<iframe
+				src="https://www.youtube.com/embed/3yCAZWdqX_Y?rel=0&amp;controls=0"
+				allowfullscreen></iframe>"
+		</div>
+	</div>
+	<div class="sidePairBottom">
+		<a href="https://www.tesla.com/autopilot">Tesla Autopilot
+		</a>test. Lots of companies are working on this, and
+		Google pioneered it. This video was just chosen because Elon.
+	</div>
+	<div class="sidePairTop">
+		<div class="framewrap frame16x9">
+				<iframe
+				src="https://sketchfab.com/models/1c4641c9a7f74a02b5522a99dac8c92e/embed"
+				allowfullscreen></iframe>"
+		</div>
+	</div>
+	<div class="sidePairBottom">
+		The beginnings of an adaptation of the ATHLETE rover for the
+		virtual colony.
+	</div>
+	<div class="sidePairTop">
+	<div class="framewrap frame16x9" >
+		<iframe src="https://sketchfab.com/models/37e0857d61614e47a7e4d81be072d19d/embed" allowfullscreen>
+	</div>
+</div>
+<div class="sidePairBottom">
+	This crane design bears its loads entirely under tension. It is a light
+	and strong design that works entirely using cables and winches. The
+	central platform can move anywhere in the volume under the crane and
+	remain stable and strong. Add robot to platform, this thing can do a lot
+	of stuff.
+</div>
 </aside>
+
+</div>
+<div class="container">
+	<section>
+		<div class="outerDiv">
+			<div class="innerDiv">
+				<h1>Construction and Fabrication - the Road to Big Business </h1>
+				<p>If there was a way to build a habitable shelter on the
+					Moon that wasn't super hard, we'd already be there. It
+					is important not to underestimate how hard it is to do
+					this. But, the needed technology is coming together.
+					The question of how it might be done is in fact greatly
+					changed by the reality of robots.
+					<br><br>
+					Most designs for lunar construction up to now have
+					focused on batch processes that don't require much
+					finesse (such as making lunar concrete blocks). Few
+					designs have contemplated use of in situ materials,
+					though, because of the difficulty of delivering
+					the machinery to work them, and the probability
+					such machinery wouldn't last long in such a harsh
+					environment. Almost all serious designs send
+					finished modules built on Earth.
+					<br><br>
+					If you plan to stay, you have to be able to build there.
+					If you can build there, well, you have something you can
+					sell. If you are good at it, you can build for space, too.
+					That opens up giant opportunities.
+					<br><br>
+					All construction designs here are centered around the use
+					of melted regolith, in particular the basalt of the lunar
+					maria. When basalt is drawn into fibers it has
+					good tension strength. A material that is strong in tension
+					is the key to space development. Holding in an atmosphere
+					requires it. Possibly the minerals of the highlands could
+					also be melted and spun into glass fibers with decent
+					strength. Glass fibers on Earth can't bear much tension,
+					but the different chemistry of lunar minerals may mean they
+					have much higher tensile strength.
+					<br><br>
+					All these designs absolutely depend on the use of agile
+					robots. They don't have to be carpenters, but they do
+					need the manual skills of your typical 5 year old.
+					Guided by human operators on Earth, that would be enough.
+					Several development missions would need to go to the Moon
+					to test and refine that technology.
+					<br><br>
+					If you have those robots, what follows is the best way to
+					build. By far, no contest. So, if you perhaps calculate that
+					such robots are a long way off, still by the time Cernan's
+					Promise was fully developed, they would exist and have been
+					used for the bulk of that construction. We can quibble
+					later about the most plausible way to
+					present the first few missions, when those robots are in
+					development and can't be relied on. The winds blow very
+					strongly towards the development of robots like this, so
+					it is sound policy to explore what they can do.
+				</p>
+			</div>
+		</div>
+	</section>
+	<aside>
+			<div class="sidePairTop">
+			<div class="framewrap frame16x9" >
+				<iframe src="https://sketchfab.com/models/37e0857d61614e47a7e4d81be072d19d/embed" allowfullscreen>
+			</div>
+		</div>
+		<div class="sidePairBottom">
+			This crane design bears its loads entirely under tension. It is a light
+			and strong design that works entirely using cables and winches. The
+			central platform can move anywhere in the volume under the crane and
+			remain stable and strong. Add robot to platform, this thing can do a lot
+			of stuff.
+		</div>
+	</aside>
 </div>
 </body>
 </html>
