add content to machines page
Former-commit-id: e67073daeba4d72f4669fcf5e4bfdea5140f80fc

--- a/machines.html
+++ b/machines.html
@@ -170,6 +170,7 @@
 		<div class="framewrap frame16x9">
 				<iframe
 				src="https://www.youtube.com/embed/Tb0_GNyczCA"
+					mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""
 				allowfullscreen></iframe>
 		</div>
 	</div>
@@ -182,6 +183,7 @@
 		<div class="framewrap frame16x9">
 				<iframe
 				src="https://www.youtube.com/embed/tf7IEVTDjng?rel=0&amp;controls=0"
+					mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""
 				allowfullscreen></iframe>"
 		</div>
 	</div>
@@ -195,6 +197,7 @@
 		<div class="framewrap frame16x9">
 				<iframe
 				src="https://www.youtube.com/embed/3yCAZWdqX_Y?rel=0&amp;controls=0"
+					mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""
 				allowfullscreen></iframe>"
 		</div>
 	</div>
@@ -206,28 +209,16 @@
 	<div class="sidePairTop">
 		<div class="framewrap frame16x9">
 				<iframe
-				src="https://sketchfab.com/models/1c4641c9a7f74a02b5522a99dac8c92e/embed"
-				allowfullscreen></iframe>"
+				src="modelProxy16.html"	frameborder="0"
+				allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true"
+				onmousewheel=""></iframe>
 		</div>
 	</div>
 	<div class="sidePairBottom">
 		The beginnings of an adaptation of the ATHLETE rover for the
 		virtual colony.
 	</div>
-	<div class="sidePairTop">
-	<div class="framewrap frame16x9" >
-		<iframe src="https://sketchfab.com/models/37e0857d61614e47a7e4d81be072d19d/embed" allowfullscreen>
-	</div>
-</div>
-<div class="sidePairBottom">
-	This crane design bears its loads entirely under tension. It is a light
-	and strong design that works entirely using cables and winches. The
-	central platform can move anywhere in the volume under the crane and
-	remain stable and strong. Add robot to platform, this thing can do a lot
-	of stuff.
-</div>
 </aside>
-
 </div>
 <div class="container">
 	<section>
@@ -291,7 +282,9 @@
 	<aside>
 			<div class="sidePairTop">
 			<div class="framewrap frame16x9" >
-				<iframe src="https://sketchfab.com/models/37e0857d61614e47a7e4d81be072d19d/embed" allowfullscreen>
+				<iframe src="modelProxy15.html" frameborder="0" allowfullscreen
+				mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
+				</iframe>
 			</div>
 		</div>
 		<div class="sidePairBottom">
@@ -303,5 +296,23 @@
 		</div>
 	</aside>
 </div>
+<div class="container_SF_iframe">
+	<div class="SF-Div">
+		<h2>Interactive 3d models</h2>
+		Press the play arrow to load the 3d models
+		below (twice - it's a page-load-time thing). Check out the controls at the bottom
+		of the model window - especially the bar to click through the
+		annotations, and the double arrows in the corner to make it
+		full screen.<br><br>
+		These models are in development, both in what is in them, and in how it
+		is presented. They go through spurts of changes, which should become
+		more frequent and dramatic with time. Right now they are at a pretty early
+		stage.
+	</div>
+	<section class="framewrap frame16x9">
+					<iframe src="modelProxy17.html" frameborder="0" allowfullscreen
+					mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
+					</iframe>
+	</section>
 </body>
 </html>
