--- a/modelProxy17.html
+++ b/modelProxy17.html
@@ -27,10 +27,13 @@ a {
 </style>
 </head>
 <body>
-<a href="https://sketchfab.com/models/37e0857d61614e47a7e4d81be072d19d/embed"
+<a href="https://sketchfab.com/models/62039eac11d944378a9a7bbafd6087fa/embed"
 >
-<img src="img/thumb/NISTcraneButton.jpg" width="85%"
+<img src="img/thumb/BasaltFiberProdButton.jpg" width="85%"
  class="overlay" alt="Link to 3D model">
+ The production of basalt fiber is critical technology for large construction.
+ Cable can perhaps be imported for the first hab, after that this has to be
+ made to work.
 </a>
 </body>
 </html>
