adding content to machines and colonies
Former-commit-id: 39455c032279c132288d4268402e76d4e747a2ba

--- a/colonies.html
+++ b/colonies.html
@@ -92,7 +92,7 @@
 			</p>
 	</div>
 </header>
-<div class="container">
+<div class="container" id="lalande">
 	<section>
 		<div class="outerDiv">
 			<div class="innerDiv">
@@ -196,7 +196,64 @@
 					mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
 					</iframe>
 	</section>
+	<section>
+		<div class="SF-Div">
+			We'd like to know what you think - comment section coming...
+		</div>
+	</section>
 </div>
+<div class="container" id="peary">
+	<section>
+		<div class="outerDiv">
+			<div class="innerDiv">
+				<h1>Peary Crater: Water Inside, Eternal Sun Outide</h1>
+				<p>
+					Just a few years ago it was confirmed that in the deep constant
+					shadow of the craters of the Moon's poles there is water. Plus a
+					mix of other substances that were steamed out of the rest of the
+					Moon eons ago - carbon dioxide, ammonia. There seem to be hundreds
+					of millions of tons of it, perhaps billions. There ensued excitement
+					about the new possibilities for settlement this creates - within a
+					small community. Most of the world has already discarded the idea of
+					settling the Moon and wants to press on to Mars, if they favor
+					space settlement at all. We have fogotten the images of lunar bases
+					and towns that were so common during the Apollo days.
+					<br><br>
+					That small community noted that right beside those reserves of
+					volatiles (being substances that are normally too volatile in the
+					lunar environment to stick around), there are peaks on the crater
+					rims that receive sunlight over 90% of the time. If you can raise
+					solar panels on masts 30 m or so, in the right spots they would get
+					sunlight virtually all the time. So you have solved energy and water,
+					two really big challenges.
+					<br><br>
+					Thus most pushes for lunar bases these days focus on the poles. There
+					is even a business model - turn the water into liquid hydrogen and
+					liquid oxygen, and sell it as feul for satellites, deep space missions,
+					and space stations. Unlike putting a base on Mars, this is a space
+					program we could undertake quickly, it is much safer, and it has
+					practical payoffs here at home - space refeuling would allow much
+					more space exploration.
+					<br><br>
+					At the moment, it is an open question whether the base at Peary
+					Crater should be the first priority, or the first missions should go
+					to Lalande and expand to Peary from there. There are several reasons
+					to doubt hydro-lox fuel production would be a
+					good business in this paradigm. An orbital tether system,
+					ion drive cargo ships, and nuclear shuttles are all part of this plan,
+					which hugely cuts down the importance of local hydrolox.
+					The water needs of Lalande in the early days could be provided from
+					Earth. The choice of nuclear power plants negates the need
+					for constant sun.
+					<br><br>
+					On further investigation, a version of the construction technique
+					planned for Lalande would work at the poles. 
 
+				</p>
+			</div>
+	</div>
+</section>
+
+</div>
 </body>
 </html>
