--- a/machines.html
+++ b/machines.html
@@ -94,7 +94,7 @@
 						</p>
 				</div>
 			</header>
-<div class="container">
+<div class="container" id="robots">
 	<section>
 	<div class="outerDiv">
 		<div class="innerDiv">
@@ -103,8 +103,10 @@
 				In this project, the approach is taken that the first missions to settle
 				the Moon will focus on developing the robotic infrastructure needed to
 				do construction entirely without humans present. Such robots do not yet
-				exist, but the field is advancing quickly and development of that
-				technology has a wealth of applications here on Earth. A few missions
+				exist, but the field is advancing quickly. Development of that
+				technology has a wealth of applications here on Earth, it would make
+				sense to make such R&D a central part of a settlement space program.
+				A few missions
 				would be needed where a minimal crew go to support the prototype robots,
 				testing and fixing them, until there is confidence the robots can be
 				operated remotely from Earth. After that, construction proceeds without
@@ -220,7 +222,7 @@
 	</div>
 </aside>
 </div>
-<div class="container">
+<div class="container" id="construction">
 	<section>
 		<div class="outerDiv">
 			<div class="innerDiv">
@@ -313,6 +315,26 @@
 					<iframe src="modelProxy17.html" frameborder="0" allowfullscreen
 					mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
 					</iframe>
+	</section>
+	<section class="framewrap frame16x9">
+					<iframe src="modelProxy18.html" frameborder="0" allowfullscreen
+					mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
+					</iframe>
+	</section>
+	<section class="framewrap frame16x9">
+					<iframe src="modelProxy19.html" frameborder="0" allowfullscreen
+					mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
+					</iframe>
+	</section>
+	<section class="framewrap frame16x9">
+					<iframe src="modelProxy20.html" frameborder="0" allowfullscreen
+					mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
+					</iframe>
+	</section>
+	<section>
+		<div class="SF-Div">
+			We'd like to know what you think - comment section coming...
+		</div>
 	</section>
 </body>
 </html>
