--- a/modelProxy11.html
+++ b/modelProxy11.html
@@ -23,15 +23,15 @@ a {
 	font-family: sans-serif;
 	font-size: 14px;
 	line-height: 22px;
-	padding: 0 40px;
 }
 </style>
 </head>
 <body>
 <center>
-<a href="https://sketchfab.com/models/de6fa972ff324aaab82ef9dd744efa45/embed"
-style="padding:5px;">
-<img src="img/thumb/AtriumCutawayButton.jpg" width="90%"
+<a href="https://sketchfab.com/models/de6fa972ff324aaab82ef9dd744efa45/embed
+?autostart=1" frameborder="0" allowfullscreen
+mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
+<img src="img/thumb/AtriumCutawayButton.jpg" width="85%"
  class="overlay" alt="Link to 3D model">
  This cutaway lets you appreciate the structure and layout
  of this atrium and sunken hall combination. It is the first
