--- a/modelProxy13.html
+++ b/modelProxy13.html
@@ -23,15 +23,15 @@ a {
 	font-family: sans-serif;
 	font-size: 14px;
 	line-height: 22px;
-	padding: 0 40px;
 }
 </style>
 </head>
 <body>
 <center>
-<a href="https://sketchfab.com/models/d7f2c0d87ef1419db1bd4308ba3d0a45/embed"
-style="padding:5px;">
-<img src="img/thumb/GalleryCutawayButton.jpg" width="90%"
+<a href="https://sketchfab.com/models/d7f2c0d87ef1419db1bd4308ba3d0a45/embed
+?annotation=1&amp;autostart=1" frameborder="0" allowfullscreen
+mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
+<img src="img/thumb/GalleryCutawayButton.jpg" width="85%"
  class="overlay" alt="Link to 3D model">
 The gallery habitats are the first ones truly designed for life-long residence.
 They require more infrastructure to build. They, and the long atriums, are
