--- a/modelProxy14.html
+++ b/modelProxy14.html
@@ -23,19 +23,17 @@ a {
 	font-family: sans-serif;
 	font-size: 14px;
 	line-height: 22px;
-	padding: 0 40px;
 }
 </style>
 </head>
 <body>
-<center>
-<a href="https://sketchfab.com/models/37e0857d61614e47a7e4d81be072d19d/embed"
-style="padding:5px;">
-<img src="img/thumb/DomeCityButton.jpg" width="90%"
+<a href="https://sketchfab.com/models/37e0857d61614e47a7e4d81be072d19d/embed
+?annotation=1&amp;autostart=1" frameborder="1" allowfullscreen
+mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
+<img src="img/thumb/DomeCityButton.jpg" width="85%"
  class="overlay" alt="Link to 3D model">
 Lalande City, home to a million people. Well, the beginnings of it. It takes
 an awful lot of quartz to make that dome, but what you get is pretty snazzy.
 </a>
-</center>
 </body>
 </html>
