--- a/modelProxy17.html
+++ b/modelProxy17.html
@@ -27,8 +27,9 @@ a {
 </style>
 </head>
 <body>
-<a href="https://sketchfab.com/models/62039eac11d944378a9a7bbafd6087fa/embed"
->
+<a href="https://sketchfab.com/models/62039eac11d944378a9a7bbafd6087fa/embed
+?autostart=1" frameborder="0" allowfullscreen
+mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
 <img src="img/thumb/BasaltFiberProdButton.jpg" width="85%"
  class="overlay" alt="Link to 3D model">
  The production of basalt fiber is critical technology for large construction.
