--- a/modelProxy20.html
+++ b/modelProxy20.html
@@ -27,11 +27,14 @@ a {
 </style>
 </head>
 <body>
-<a href="https://sketchfab.com/models/1c4641c9a7f74a02b5522a99dac8c92e/embed
+<a href="https://sketchfab.com/models/1e03189977d44317af0d9a572b9d55ab/embed
 ?autostart=1" frameborder="0" allowfullscreen
 mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
-<img src="img/thumb/ATHroverButton.jpg" width="85%"
+<img src="img/thumb/HangarCutawayButton.jpg" width="85%"
  class="overlay" alt="Link to 3D model">
+The hangars will be filled up with lots more things. This early draft gives
+some sense that industrial scales are sought, and the work flow will be
+complex.
 </a>
 </body>
 </html>
