--- a/modelProxy10.html
+++ b/modelProxy10.html
@@ -23,15 +23,15 @@ a {
 	font-family: sans-serif;
 	font-size: 14px;
 	line-height: 22px;
-	padding: 0 40px;
 }
 </style>
 </head>
 <body>
 <center>
-<a href="https://sketchfab.com/models/a365dc23ee6349b8997d1585b733e635/embed"
-style="padding:5px;">
-<img src="img/thumb/Phase1_Overview.jpg" width="90%"
+<a href="https://sketchfab.com/models/a365dc23ee6349b8997d1585b733e635/embed
+?autostart=1" frameborder="0" allowfullscreen
+mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
+<img src="img/thumb/Phase1_Overview.jpg" width="85%"
  class="overlay" alt="Link to 3D model">
  This model shows many years of development. How many? Hard to say, that
  would depend on advancements in robotics more than anything else -
