--- a/modelProxy12.html
+++ b/modelProxy12.html
@@ -23,15 +23,15 @@ a {
 	font-family: sans-serif;
 	font-size: 14px;
 	line-height: 22px;
-	padding: 0 40px;
 }
 </style>
 </head>
 <body>
 <center>
-<a href="https://sketchfab.com/models/0f3f042a7561432bab21bd315742aa29/embed"
-style="padding:5px;">
-<img src="img/thumb/AtriumRadBlindButton.jpg" width="90%"
+<a href="https://sketchfab.com/models/0f3f042a7561432bab21bd315742aa29/embed
+?annotation=1&amp;autostart=1" frameborder="0" allowfullscreen
+mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
+<img src="img/thumb/AtriumRadBlindButton.jpg" width="85%"
  class="overlay" alt="Link to 3D model">
 Here is a nerd-session about how the radiation blind works. It's a valuable
 innovation, as the only other way to have natural light is to put 3.5 meters of
