--- a/modelProxy15.html
+++ b/modelProxy15.html
@@ -27,8 +27,9 @@ a {
 </style>
 </head>
 <body>
-<a href="https://sketchfab.com/models/37e0857d61614e47a7e4d81be072d19d/embed"
->
+<a href="https://sketchfab.com/models/37e0857d61614e47a7e4d81be072d19d/embed
+?autostart=1" frameborder="0" allowfullscreen
+mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
 <img src="img/thumb/NISTcraneButton.jpg" width="85%"
  class="overlay" alt="Link to 3D model">
 </a>
