--- a/modelProxy18.html
+++ b/modelProxy18.html
@@ -27,11 +27,15 @@ a {
 </style>
 </head>
 <body>
-<a href="https://sketchfab.com/models/1c4641c9a7f74a02b5522a99dac8c92e/embed
+<a href="https://sketchfab.com/models/1621e5f3283840b6b02385cfd8ec98dd/embed
 ?autostart=1" frameborder="0" allowfullscreen
 mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
-<img src="img/thumb/ATHroverButton.jpg" width="85%"
+<img src="img/thumb/MIPstationButton.jpg" width="85%"
  class="overlay" alt="Link to 3D model">
+The Melt-In-Place stations need to be the backbone of early construction.
+They can produce a wide range of useful items, a very wide range if the
+rovers are agile enough to assist. They can produce materials in bulk, so if
+the materials have some weaknesses, you can simply use more to compensate.
 </a>
 </body>
 </html>
