--- a/modelProxy19.html
+++ b/modelProxy19.html
@@ -27,11 +27,17 @@ a {
 </style>
 </head>
 <body>
-<a href="https://sketchfab.com/models/1c4641c9a7f74a02b5522a99dac8c92e/embed
+<a href="https://sketchfab.com/models/4299c52226ba425a9a4bb079f9c093ba/embed
 ?autostart=1" frameborder="0" allowfullscreen
 mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
-<img src="img/thumb/ATHroverButton.jpg" width="85%"
+<img src="img/thumb/DustroasterButton.jpg" width="85%"
  class="overlay" alt="Link to 3D model">
+The dust roaster hasn't been labelled. It is an important piece.
+It takes a molten regolith feed and super-heats it by induction, then passes
+that through an electric field that causes different ions to deflect by
+different amounts. You get a set of pure metals in the collector, neatly
+separated. And you can also skim off pure oxygen during the process. This one
+machine solves several problems. Even the slag is useful.
 </a>
 </body>
 </html>
