adding content to machines and colonies
Former-commit-id: 10abf38451da6805ca742a3d3483120a6a747441 [formerly 39455c032279c132288d4268402e76d4e747a2ba]
Former-commit-id: 7638b9ad69aaf7956485e1422c7913133d3df402

--- a/modelProxy16.html
+++ b/modelProxy16.html
@@ -27,8 +27,9 @@ a {
 </style>
 </head>
 <body>
-<a href="https://sketchfab.com/models/1c4641c9a7f74a02b5522a99dac8c92e/embed"
->
+<a href="https://sketchfab.com/models/1c4641c9a7f74a02b5522a99dac8c92e/embed
+?autostart=1" frameborder="0" allowfullscreen
+mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
 <img src="img/thumb/ATHroverButton.jpg" width="85%"
  class="overlay" alt="Link to 3D model">
 </a>
