add content to colonies.html
Former-commit-id: 785e5df82a74c3f9acf86dd3b1f156ab8148f86d [formerly 2f3536dbe8f01a366b0aac7d6e607bcbb1d764d6]
Former-commit-id: e8f03a7165164a79c3df267c4b97e73c914be111

--- a/colonies.html
+++ b/colonies.html
@@ -161,8 +161,8 @@
 <div class="container_SF_iframe">
 	<div class="SF-Div">
 		<h2>Interactive 3d models</h2>
-		Press the play arrow to load the 3d models
-		below (twice - it's a page-load-time thing). Check out the controls at the bottom
+		Click the play arrow to load the 3d models
+		below. Check out the controls at the bottom
 		of the model window - especially the bar to click through the
 		annotations, and the double arrows in the corner to make it
 		full screen.<br><br>
@@ -218,7 +218,8 @@
 					settling the Moon and wants to press on to Mars, if they favor
 					space settlement at all. We have fogotten the images of lunar bases
 					and towns that were so common during the Apollo days.
-					<br><br>
+				</p>
+				<p>
 					That small community noted that right beside those reserves of
 					volatiles (being substances that are normally too volatile in the
 					lunar environment to stick around), there are peaks on the crater
@@ -235,7 +236,7 @@
 					practical payoffs here at home - space refeuling would allow much
 					more space exploration.
 					<br><br>
-					At the moment, it is an open question whether the base at Peary
+					It has been repeatedly debated whether the base at Peary
 					Crater should be the first priority, or the first missions should go
 					to Lalande and expand to Peary from there. There are several reasons
 					to doubt hydro-lox fuel production would be a
@@ -245,15 +246,96 @@
 					The water needs of Lalande in the early days could be provided from
 					Earth. The choice of nuclear power plants negates the need
 					for constant sun.
-					<br><br>
+				</p>
+				<p>
 					On further investigation, a version of the construction technique
-					planned for Lalande would work at the poles. 
-
+					planned for Lalande would work with the minerals found in the highlands,
+					where the poles are. That means a large
+					habitat like proposed for Lalande could be made at Peary, allowing
+					the early research and development needed for the core business in this
+					paradigm - construction - to be done there. The assertion is that
+					construction is the best and fastest way to make a Moon settlement
+					profitable, so it is quite significant to have a way to work at the
+					pole on the core business, as well as volatile mining.
+					In that case, the advantage
+					of the machines not needing to deal with night also weighs in favor
+					of going there first. So, now the idea is that a small settlement is
+					made at Peary, and then the first crew sends machines to Lalande and
+					makes the next hab.
+					<br><br>
+					The early robotic missions would focus on making
+					the hab, not on volatile mining. It is much better for people to be
+					nearby when undertaking something as tricky as extracting volatiles
+					from one of the coldest places in the solar system. Since the focus
+					is developing construction capability, the missions can take more
+					time to perfect and ramp up production of water,
+					carbon dioxide, and ammonia. At first the water that is obtained is
+					only to supplement the fuel supply of the nuclear shuttles. Then it
+					supplies their fuel entirely, and then the new colony has more and
+					more freedom to use water for greenhouses.
+				</p>
+				<p>
+					Finally, Peary starts
+					shipping water, carbon, and ammonia to Lalande in ever larger
+					amounts. That water stays on the Moon, to make ponds, then swimming
+					pools, then small lakes. Maybe some would ship to orbit for fuel,
+					or radiation shielding. But
+					there might be no need. By this time asteroids will be mined for
+					water and metals and may be a better source for needs in open space.
 				</p>
 			</div>
+		</div>
+	</section>
+	<aside>
+		<figure class="sideDiv">
+			<img src="img/PearyArea.jpg" alt="The region around Peary crater, at the
+			lunar north pole">
+			<figcaption>Peary is an old crater at the north pole largely filled in
+				with regolith. It is about 75 km across. The LROC image collage at
+				<a href="http://target.lroc.asu.edu/q3">Quickmap</a> show
+				the region in high detail, but thanks to the sun's very low angle and
+				the polar orbit of LROC, the images are very fragmented and full of
+				solid black shadows.
+			</figcaption>
+		</figure>
+		<figure class="sideDiv">
+			<img src="img/PearyIllumination.jpg" alt="illumination map of sun at the
+			north pole">
+			<figcaption>The rims of Whipple and Hinshelwood craters,
+				at the north end of Peary, could be the best
+				places for habitats and infrastructure. This illumination map shows they
+				have areas of near constant sun. For a better look, go to this
+				<a href="http://bit.ly/2j3qNw9">Quickmap</a> link of the spot. Quickmap
+				also has lots of other data you can see by playing with the menu that
+				opens when you click the three diamonds in the top left corner.
+			</figcaption>
+		</figure>
+	</aside>
 	</div>
-</section>
-
-</div>
+	<div class="container_SF_iframe">
+		<section class="framewrap frame16x9">
+						<iframe src="modelProxy21.html" frameborder="0" allowfullscreen
+						mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
+						</iframe>
+		</section>
+	<section>
+		<div class="SF-Div">
+			We'd like to know what you think - comment section coming...
+		</div>
+	</section>
+	</div>
+	<div class="container">
+		<section>
+		<div class="outerDiv">
+			<div class="innerDiv">
+				<h1>Orbital colonies - Now we travel the heavens at will</h1>
+				<p>
+					Orbital tethers need asteroids as their stabilizing central mass, and
+					those asteroids are a great place to start a space station. 
+				</p>
+				</div>
+			</div>
+		</section>
+	</div>
 </body>
 </html>
