--- a/machines.html
+++ b/machines.html
@@ -109,9 +109,12 @@
 				A few missions
 				would be needed where a minimal crew go to support the prototype robots,
 				testing and fixing them, until there is confidence the robots can be
-				operated remotely from Earth. After that, construction proceeds without
-				anyone on-site. Once the atrium hab is near completion, again a crew
-				arrives. They test the hab, maybe fix a few things. Then they stay.
+				operated remotely from Earth. After that, the robots build the
+				first permanent habitat and its infrastructure without
+				anyone on-site. Once that hab is near completion,
+				again a crew
+				arrives. They test everything, maybe make some minor final touches.
+				Then they stay.
 				After that the human population ramps up quickly and they operate the
 				robotic machinery from within the habs.
 				<br><br>
@@ -230,9 +233,8 @@
 				<p>If there was a way to build a habitable shelter on the
 					Moon that wasn't super hard, we'd already be there. It
 					is important not to underestimate how hard it is to do
-					this. But, the needed technology is coming together.
-					The question of how it might be done is in fact greatly
-					changed by the reality of robots.
+					this. But, the needed technology is coming together and
+					turns out to change the equation of what the best method is.
 					<br><br>
 					Most designs for lunar construction up to now have
 					focused on batch processes that don't require much
@@ -245,9 +247,9 @@
 					finished modules built on Earth.
 					<br><br>
 					If you plan to stay, you have to be able to build there.
-					If you can build there, well, you have something you can
-					sell. If you are good at it, you can build for space, too.
-					That opens up giant opportunities.
+					If you can build there, you have something you can
+					sell. If you are good at it, you can build for space, too,
+					and that's our whole idea.
 					<br><br>
 					All construction designs here are centered around the use
 					of melted regolith, in particular the basalt of the lunar
@@ -275,7 +277,7 @@
 					later about the most plausible way to
 					present the first few missions, when those robots are in
 					development and can't be relied on. The winds blow very
-					strongly towards the development of robots like this, so
+					strongly towards their development, so
 					it is sound policy to explore what they can do.
 				</p>
 			</div>
@@ -301,8 +303,8 @@
 <div class="container_SF_iframe">
 	<div class="SF-Div">
 		<h2>Interactive 3d models</h2>
-		Press the play arrow to load the 3d models
-		below (twice - it's a page-load-time thing). Check out the controls at the bottom
+		Click the play arrow to load the 3d models
+		below. Check out the controls at the bottom
 		of the model window - especially the bar to click through the
 		annotations, and the double arrows in the corner to make it
 		full screen.<br><br>
