--- a/colonies.html
+++ b/colonies.html
@@ -324,14 +324,14 @@
 		</div>
 	</section>
 	</div>
-	<div class="container">
+	<div class="container" id="orbital">
 		<section>
 		<div class="outerDiv">
 			<div class="innerDiv">
 				<h1>Orbital colonies - Now we travel the heavens at will</h1>
 				<p>
 					Orbital tethers need asteroids as their stabilizing central mass, and
-					those asteroids are a great place to start a space station. 
+					those asteroids are a great place to start a space station.
 				</p>
 				</div>
 			</div>
