resizable image formatting
Former-commit-id: cae075b554d1444d414edf78ae82c243d752cc50 [formerly 7342bd70beaeb4ada4b7d8b1e3b60f43e48f19d8]
Former-commit-id: 28b95074ae8a6711ae9c0680931492e7bcd54a06

--- a/colonies.html
+++ b/colonies.html
@@ -130,15 +130,24 @@
 			Lalande, so it has the first boom-town.
 				</p>
 			</div>
-			<div class="innerDiv">
-				<h2>Click an image to go to the page on Lalande Crater
-				</h2>
+			<div class="pixHeader">
+				<h3>Click an image to go to the page on Lalande Crater
+				</h3>
+			</div>
+			<div class="pixWrap">
 				<div class="thumbs">
-					<img src="img/Thumb-LalandeCrop.jpg">
-					<img src="img/Thumb-LalandeTempDiff.jpg">
-					<img src="img/Thumb-Lal-boulders2.jpg">
 					<img src="img/Thumb-Lunar_Thorium_hotspots.jpg">
 				</div>
+				<div class="thumbs">
+					<img src="img/Thumb-Lal-boulders2.jpg">
+				</div>
+				<div class="thumbs">
+					<img src="img/Thumb-LalandeTempDiff.jpg">
+				</div>
+				<div class="thumbs">
+					<img src="img/Thumb-LalandeCrop.jpg">
+				</div>
+
 			</div>
 		</div>
 	</section>
