--- a/lalande.html
+++ b/lalande.html
@@ -79,20 +79,16 @@
 		<img src="img/MWLogo-for-black-bckgnd.svg" alt="Moonwards" id="logo">
 	</div>
 	<div class="intro">
-			<h1>The Colonies</h1>
-			<p>To settle the Moon you have to find the right place, set up
-			the right transport, and pursue the right business. All of these
-			matters are open questions. Often the best options are ignored
-			because it would be too expensive under current budgets, or there
-			would be too much resistance from people who don't understand
-			the risks and benefits of the technology involved. Consistent,
-			ongoing high investment changes the possibilities and the best path.
+			<h1>Lalande Crater</h1>
+			<p>Steep walls, riddled with boulders, fields of skree, full of fissures -
+				there are few craters on the Moon like Lalande.
 			</p>
 	</div>
 </header>
 <div class="container">
   <div class="outerDiv">
     <div class="innerDiv">
+
     </div>
 	</div>
 </section>
