learn layout redone
Former-commit-id: ab20cc33279c5a7b5d0ab635b9ffe3b0ebb687c8 [formerly 6140a90ebfc521e2888b4dfbf105bc1383d58b95]
Former-commit-id: 1d70f23e757e9b9da935b05ee97c41997eaead11

--- a/basetemplate.html
+++ b/basetemplate.html
@@ -28,9 +28,8 @@
 	  </script>
 	  <noscript>
 
-	     Your browser is obsolete, or it has Javascript turned off. This site uses a lot of 3d media and has a lot of other content that won't work on older browsers or ones without Javascript. Please please upgrade your browser. Firefox and Chrome are both more secure than old Internet Explorer versions, with or without Javascript. And if you are concerned about vulnerabilities due to scripts, you'd do better to uninstall Java (which is a different language), get rid of Adobe Reader (Firefox and Chrome can both read .pdf files without the reader), and keep your browser up to date. Look for security and privacy add-ons as well for peace of mind.
-			 Really, on behalf of The Web, please upgrade to a modern browser
-			 and don't turn off Javascript.
+	     Say, your browser is obsolete. This site uses a lot of 3d media and has a lot of other content that won't work on older browsers. Please please upgrade your browser. Firefox and Chrome are both more secure than old Internet Explorer versions,
+			 Really, on behalf of The Web, please upgrade to a modern browser.
 			 Thank you, thank you, thank you.
 			 	<a href="https://www.mozilla.org/en-US/firefox/new/">Firefox</a>
 			 	<a href="https://www.google.com/chrome/browser/desktop/index.html">Chrome</a>
