--- a/learn.html
+++ b/learn.html
@@ -144,30 +144,7 @@ It seems like you do not have JavaScript enabled. If that is by intent, we can i
 The calculators are also based on JavaScript, and they do not work without it. They are free software under the terms of the GPL.
 			</p>
 		</noscript>
-		<section>
-		<div class="outerDiv">
-			<div class="innerDiv" style="flex: 0 1 250px;">
-				<h2>The Rocket Equation</h2>
-				<p style="padding-bottom: 5px;margin-bottom: 0;">Mass ratio:</p>
-				<input type="text" title="Start mass divided by end mass" placeholder="Start mass divided by end mass" value="" id="massratioRE">
-				<p style="padding-bottom: 5px;margin-bottom: 0;">Exhaust velocity: (m/s)</p>
-				<input type="text" placeholder="Velocity of the rocket exhaust" value="" id="exhaustvelocityRE">
-				<p>
-					<input type="checkbox" id="ispcheckboxRE"> use I<sub>sp</sub> instead
-				</p>
-				<button onclick="rocket()">Calculate!</button><br>
-				<script src="js/rocketEquation.js"></script>
-				<p id="resultRE">&nbsp;</p>
-				<p id="moreThan"></p>
-				<p id="lessThan"></p>
-				<div class="imgResize">
-					<a href="rotovator.html">
-						<img src="img/animatedRotovatorLink.png" alt="view the animations!">
-					</a>
-				</div>
-			</div>
-		</div>
-
+		<section id="interactives">
 
 		<div class="outerDiv">
 			<div class="innerDiv">
@@ -188,10 +165,10 @@ The calculators are also based on JavaScript, and they do not work without it. T
 			</div>
 		</div>
 
-				<div class="outerDiv">
-					<div class="innerDiv">
+			<div class="outerDiv">
+				<div class="innerDiv">
 				<h2>Lunar Elevator</h2>
-				<p>Start distance: <br>(From the centre of the <br>Moon towards Earth)</p>
+				<p>Start distance: (From the centre of the Moon towards Earth)</p>
 				<input type="text" placeholder="(km)" value="" id="start">
 				<p style="padding-top: 5px; margin-top: 0;"><input type="checkbox" id="surface">use lunar surface</p>
 				<p>End distance</p>
@@ -201,18 +178,40 @@ The calculators are also based on JavaScript, and they do not work without it. T
 				<input type="text" placeholder="(Yuri)" value="" id="material">
 				<p style="padding-top: 5px; margin-top: 0;"><input type="checkbox" id="zylon">use Zylon</p>
 				<p><input type="checkbox" id="tethermass"> I want the mass of
-					<br>the elevator too!</p>
-				<p>Parameters required to<br> calculate elevator mass:</p>
+					the elevator too!</p>
+				<p>Parameters required to calculate elevator mass:</p>
 				<p style="padding-bottom: 5px;margin-bottom: 0;">Payload mass:</p>
 				<input type="text" placeholder="(kg)" value="" id="payloadmass">
 				<p style="padding-bottom: 5px;margin-bottom: 0;">Safety factor:</p>
-				<input type="text" value="1.1" id="safety"><br><br>
-				<button onclick="tether()">Calculate!</button><br>
+				<input type="text" value="1.1" id="safety">
+				<button onclick="tether()">Calculate!</button>
 				<canvas id="tetherCanvas" width="400" height="100"></canvas>
 				<script src="js/tether.js"></script>
 				<p id="resultLE">&nbsp;</p>
 				<p id="resultLE2">&nbsp;</p>
 				<p id="resultLE3">&nbsp;</p>
+			</div>
+		</div>
+
+		<div class="outerDiv">
+			<div class="innerDiv" style="flex: 0 1 250px;">
+				<h2>The Rocket Equation</h2>
+				<p style="padding-bottom: 5px;margin-bottom: 0;">Mass ratio:</p>
+				<input type="text" title="Start mass divided by end mass" placeholder="Start mass divided by end mass" value="" id="massratioRE">
+				<p style="padding-bottom: 5px;margin-bottom: 0;">Exhaust velocity: (m/s)</p>
+				<input type="text" placeholder="Velocity of the rocket exhaust" value="" id="exhaustvelocityRE">
+				<p>
+					<input type="checkbox" id="ispcheckboxRE"> use I<sub>sp</sub> instead
+				</p>
+				<button onclick="rocket()">Calculate!</button><br>
+				<script src="js/rocketEquation.js"></script>
+				<p id="resultRE">&nbsp;</p>
+				<p id="moreThan"></p>
+				<p id="lessThan"></p>
+				<div class="imgResize">
+					<a href="rotovator.html">
+						<img src="img/RotovatorCanvasLink.png">
+				</div>
 			</div>
 		</div>
 	</section>
@@ -222,10 +221,10 @@ The calculators are also based on JavaScript, and they do not work without it. T
 		<a href="browsergame/shell.html"><img src="browsergame/images/link.png" alt="go to the browser game!"></a>
 	</div>
 -->
-<section>
+<section id="lessons">
 	<div class="outerDiv">
 		<div class="innerDiv wide">
-		<h2  id="lessons">A quick introduction to orbital mechanics</h2>
+		<h2>A quick introduction to orbital mechanics</h2>
 		<script type="text/javascript">
 		var applet1 = new GGBApplet({filename: "GeoGebra/suborbital.ggb","showtoolbar":false}, true);
 		var applet2 = new GGBApplet({filename: "GeoGebra/orbit.ggb","showtoolbar":false}, true);
@@ -234,12 +233,14 @@ The calculators are also based on JavaScript, and they do not work without it. T
 			applet2.inject('applet_container2', 'preferHTML5');
 		}
 		</script>
-		<div style="width:500px;height:500px; align-self: center;" id="applet_container2">
+		<div style="width:500px;height:500px; align-self: center; padding: 10px;
+		margin-bottom: 20px;"
+		id="applet_container2">
 			Applet not loading? <a href="img/orbit.png">Here is an image instead</a>
 		</div>
-				<p>
+				<h5>
 					The following terms are important when describing an orbit:
-				</p>
+				</h5>
 				<ul>
 					<li><b>Periapsis:</b> The point where the orbiting craft is <i>closest</i> to the object it orbits.</li>
 					<li><b>Apoapsis:</b> The point where the orbiting craft is <i>farthest</i> from the object it orbits.</li>
@@ -353,8 +354,8 @@ The calculators are also based on JavaScript, and they do not work without it. T
 			</div>
 		</div>
 	</div>
-	<div class="black col-9 floatR">
-		<div class="darkYellow pad15 roundAll">
+	<div class="outerDiv">
+		<div class="innerDiv">
 			<p>[Experimental!] A list of data. Here are some numbers we have found useful during the development of the project.</p>
 			<p>The data is also available from the open source "space.js" script, found at <a href="http://moonwards.com/js/space.js">moonwards.com/js/space.js</a></p>
 			<details class="details">
@@ -457,7 +458,7 @@ The calculators are also based on JavaScript, and they do not work without it. T
 				</details>
 			</details>
 		</div>
-		<div class="col-12 col-m-12">
+		<div class="innerDiv">
 			<a href="http://www.gnu.org/licenses/">
 				<p>All calculator scripts are released under GPL 3</p>
 			</a>
